updated run.bat